# youtube2podcast

./: README.md  pyproject.toml
src/: gemini_mcpclient.py  gemini_mcpserver.py  main.py  mylogging.py  prompt_cons.py  tools_gemini_api.py  tools_youtube_api.py
